Ensure all blocks get default alignment styles

--- a/sass/gutenberg/layout/_content.scss
+++ b/sass/gutenberg/layout/_content.scss
@@ -9,6 +9,7 @@
 }
 
 // Gutenberg core magic
+.article-content > [class^='wp-block-'],
 .is-root-container > *,
 .article-content > * {
   line-height: var(--line-height-paragraph);
